--- a/assets/pages/bank.html
+++ b/assets/pages/bank.html
@@ -47,7 +47,9 @@
                 <input type="number" min="5" id="expenditure-value" />
                 <p class="error"></p>
               </div>
-              <button id="expenditure">Click</button>
+              <div>
+                <button id="expenditure">Click</button>
+              </div>
             </form>
           </div>
           <div class="medium" style="width: 40%">
