--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <main>
-      <h1>Login</h1>
+      <h1>Register</h1>
       <form>
         <div id="name-div">
           <label for="name">Name</label>
