--- a/assets/pages/bank.html
+++ b/assets/pages/bank.html
@@ -72,27 +72,21 @@
                   of <span id="yr">50k</span>
                 </p>
 
-                <div class="money-container">
-                  <span id="azn">500</span>
-                  <span id="azn">2000</span>
-                  <span id="azn">4500</span>
-                  <span id="azn">7000</span>
-                  <span id="azn">8000</span>
-                  <span id="azn">10000</span>
+                <div class="money-container" id="money-container">
+                  <span class="azn">500</span>
                 </div>
                 <p class="desc">Select the year</p>
                 <div class="faiz">
                   1 to 5% | 2 to 10% | 5 to 12% | 10 to 15%
                 </div>
-                <select name="" id="">
-                  <option value="1">1 year</option>
-                  <option value="1">2 year</option>
-                  <option value="1">5 year</option>
-                  <option value="1">10 year</option>
+                <p class="error" id="error-credit">2</p>
+                <select name="" id="select-credit" style="margin-top: 5px">
+                  <option value="5">1 year</option>
                 </select>
-                <p class="error">2</p>
               </div>
-              <button id="credit">Click</button>
+              <div>
+                <button id="credit">Click</button>
+              </div>
             </form>
           </div>
           <div class="right">
